--- a/about.html
+++ b/about.html
@@ -1,76 +1,72 @@
 ---
 layout: default
 ---
+{% assign about_data = site.data[site.lang].pages.about %}
+{% assign document = site.prismicData.single.page_about%}
 <div class="about_yog about_yog_1 ">
   <div class="container fade-in-module">
-    <h1>{% t pages.about.title1 %}</h1>
+    <h1>{{ document.fragments.section_1_title.text }}</h1>
     <div class="about-content flex vcenter">
       <div class="about-text">
-        <img src="/images/about/photo_CIO.jpg" alt="">
+        <img src="{{ document.fragments.section_1_image.url }}" alt="{{ document.fragments.section_1_image.alt }}">
       </div>
       <div class="about-image">
-        {% capture text %}{%t pages.about.texte1 %}{% endcapture %}
-        <p>{{ text | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
-        <div class="about-more-button">
-            <a class="about-more-btn" target="_blank" rel="noopener noreferrer" href="https://www.olympic.org/youth-olympic-games">
-                {% t pages.about.more %}
-            </a>
-        </div>
+        {{ document.fragments.section_1_content.html }}
+        <div class="about-more-button"><a class="about-more-btn" target="_blank" rel="noopener noreferrer" href="{{ document.fragments.section_1_link_more.url }}">{{ document.fragments.section_1_link_more_text.text }}</a></div>
       </div>
     </div>
   </div>
 </div>
 <div class="about_yog about_yog_2">
   <div class="container fade-in-module">
-    <h1>{% t pages.about.title2 %}</h1>
+    <h1>{{ document.fragments.section_2_title.text }}</h1>
     <div class="about-content flex vcenter">
       <div class="about-text">
-        {% capture text %}{%t pages.about.texte2 %}{% endcapture %}
-        <p>{{ text | markdownify }}</p>
+        {{ document.fragments.section_2_content.html }}
       </div>
       <div class="about-image">
-        <span class="helper"></span><img src="/images/about/lillehammer_2016.jpg" alt="">
+        <span class="helper"></span><img src="{{ document.fragments.section_2_image.url }}" alt="{{ document.fragments.section_2_image.url }}">
       </div>
     </div>
   </div>
 </div>
 <div class="facts">
   <div class="container">
-    <h1>{% t pages.about.facts.title %}</h1>
+    <h1>{{ about_data.facts.title }}</h1>
       <div class="facts-entities flex">
         <div class="fact">
           <div class="wrap_facts">
-            <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact1.number %}</h1>
+            <h1 class="h1_facts" data-ix="fadeindown">{{ about_data.facts.fact1.number }}</h1>
             <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="/images/about/facts/Athlete.png" width="130">
-            <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact1.text %}</h1>
+            <h1 class="h2_facts" data-ix="fadeintop">{{ about_data.facts.fact1.text }}</h1>
           </div>
         </div>
         <div class="fact">
           <div class="wrap_facts">
-            <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact2.number %}</h1>
+            <h1 class="h1_facts" data-ix="fadeindown">{{ about_data.facts.fact2.number }}</h1>
             <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="/images/about/facts/Nation.png" width="130">
-            <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact2.text %}</h1>
+            <h1 class="h2_facts" data-ix="fadeintop">{{ about_data.facts.fact2.text }}</h1>
           </div>
         </div>
         <div class="fact">
           <div class="wrap_facts">
-            <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact3.number %}</h1>
+            <h1 class="h1_facts" data-ix="fadeindown">{{ about_data.facts.fact3.number }}</h1>
             <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="/images/about/facts/Medal.png" width="130">
-            <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact3.text %}</h1>
+            <h1 class="h2_facts" data-ix="fadeintop">{{ about_data.facts.fact3.text }}</h1>
           </div>
         </div>
         <div class="fact">
           <div class="wrap_facts">
-            <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact4.number %}</h1>
+            <h1 class="h1_facts" data-ix="fadeindown">{{ about_data.facts.fact4.number }}</h1>
             <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="/images/about/facts/Volunteer.png" width="130">
-            <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact4.text %}</h1>
+            <h1 class="h2_facts" data-ix="fadeintop">{{ about_data.facts.fact4.text }}</h1>
           </div>
         </div>
         <div class="fact">
           <div class="wrap_facts">
-            <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact5.number %}</h1>
+            <h1 class="h1_facts" data-ix="fadeindown">{{ about_data.facts.fact5.number }}</h1>
             <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="/images/about/facts/Equality.png" width="130">
-            <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact5.text %}</h1>
+            <h1 class="h2_facts" data-ix="fadeintop">{{ about_data.facts.fact5.text }}</h1>
           </div>
         </div>
       </div>
@@ -78,7 +74,7 @@ layout: default
 </div>
 <div class="key_numbers">
   <div class="container fade-in-module">
-    <h1>{% t pages.about.singleevent %}</h1>
+    <h1>{{ about_data.singleevent }}</h1>
     <div class="singleevent_img">
         <img src="/images/about/L2020_Swiss_Map.png" width="60%">
     </div>
@@ -86,82 +82,64 @@ layout: default
 </div>
 <div class="heritage">
   <div class="container fade-in-module">
-    <h1>{% t pages.about.heritage.title1 %}</h1>
+    <h1>{{ document.fragments.lausanne_legacy_title.text }}</h1>
     <div class="about-content">
-      <div class="about-text">
-        <p style="margin-top:50px;">{%t pages.about.heritage.txt1 %}</p>
-      </div>
-      <div class="about-text">
-        <p>{%t pages.about.heritage.txt2 %}</p>
-      </div>
+      {{ document.fragments.lausanne_legacy_content.html }}
     </div>
     <div class="heritage-images">
       <div class="himage1">
-        <img src="/images/about/heritage/vortex1.jpg" alt="">
+        <img src="{{ document.fragments.lausanne_legacy_image_1.url }}" alt="{{ document.fragments.lausanne_legacy_image_1.alt }}">
       </div>
       <div class="himage2">
-        <img src="/images/about/heritage/vortex2.jpg" alt="">
+        <img src="{{ document.fragments.lausanne_legacy_image_3.url }}" alt="{{ document.fragments.lausanne_legacy_image_2.alt }}">
       </div>
       <div class="himage3">
-        <img src="/images/about/heritage/vortex3.jpg" alt="">
+        <img src="{{ document.fragments.lausanne_legacy_image_3.url }}" alt="{{ document.fragments.lausanne_legacy_image_3.alt }}">
       </div>
     </div>
     <div class="about-text" id="about-text2">
-      <p>{%t pages.about.heritage.webcam2 %} &nbsp; <a target="_blank" rel="noopener noreferrer" href="http://www.cpev.ch/webcamvortex">{%t pages.about.heritage.webcam2link %}</a></p>
+      {{ document.fragments.lausanne_legacy_end.html }}
     </div>
     <div class="about-content">
-      <h1>{% t pages.about.heritage.title2 %}</h1>
+      <h1>{{ document.fragments.sporting_legacy_title.text }}</h1>
       <div class="about-text">
-        <p>{%t pages.about.heritage.txt3 %}</p>
+        {{ document.fragments.sporting_legacy_content_1.html }}
       </div>
     </div>
     <div class="heritage-images">
       <div class="himage4">
-        <img src="/images/about/heritage/malley.JPG" alt="">
+        <img src="{{ document.fragments.sporting_legacy_image_1.url }}" alt="{{ document.fragments.sporting_legacy_image_1.alt }}">
       </div>
       <div class="himage5">
-        <img src="/images/about/heritage/malley2.JPG" alt="">
+        <img src="{{ document.fragments.sporting_legacy_image_2.url }}" alt="{{ document.fragments.sporting_legacy_image_2.alt }}">
       </div>
     </div>
     <div class="about-text">
-      <p>{%t pages.about.heritage.webcam1 %} &nbsp; <a target="_blank" rel="noopener noreferrer" href="https://www.espacemalley.ch/live-webcam/">{%t pages.about.heritage.webcam1link %}</a></p>
-    </div>
-    <div class="about-content">
-      <div class="about-text">
-        <p style="margin-top: 50px;">{%t pages.about.heritage.txt4 %}</p>
-      </div>
+      {{ document.fragments.sporting_legacy_content_2.html }}
     </div>
     <div class="about-content" style="min-height:500px;">
       <div class="about-text" id="hList">
-        <p>{%t pages.about.heritage.list1 %}</p>
-        <p>{%t pages.about.heritage.list2 %}</p>
-        <p>{%t pages.about.heritage.list3 %}</p>
-        <p>{%t pages.about.heritage.list4 %}</p>
-        <p>{%t pages.about.heritage.list5 %}</p>
-        <p>{%t pages.about.heritage.list6 %}</p>
+        {{ document.fragments.sporting_legacy_content_3_left.html }}
       </div>
       <div class="heritage-images" id="hListImg">
-        <img src="/images/about/heritage/shorttrack.jpg" alt="">
+        <img src="{{ document.fragments.sporting_legacy_image_3_right.url }}" alt="{{ document.fragments.sporting_legacy_image_3_right.alt }}">
       </div>
     </div>
     <div class="about-content">
-      <h1>{% t pages.about.heritage.title3 %}</h1>
+      <h1>{{ document.fragments.educational_legacy_title.text }}</h1>
       <div class="about-text">
-        <p>{%t pages.about.heritage.txt6 %}</p>
-      </div>
-      <div class="about-text">
-        <p>{%t pages.about.heritage.txt7 %}</p>
+        {{ document.fragments.educational_legacy_content.html }}
       </div>
     </div>
     <div class="heritage-images">
       <div class="himage1">
-        <img src="/images/about/heritage/educ1.JPG" alt="">
+        <img src="{{ document.fragments.educational_legacy_image_1.url }}" alt="{{ document.fragments.educational_legacy_image_1.alt }}">
       </div>
       <div class="himage2">
-        <img src="/images/about/heritage/educ2.jpg" alt="">
+        <img src="{{ document.fragments.educational_legacy_image_2.url }}" alt="{{ document.fragments.sporting_legacy_image_2.alt }}">
       </div>
       <div class="himage3">
-        <img src="/images/about/heritage/educ3.jpg" alt="">
+        <img src="{{ document.fragments.educational_legacy_image_3.url }}" alt="{{ document.fragments.educational_legacy_image_3.alt }}">
       </div>
     </div>
   </div>
