--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 </div>
 <div class="news_section">
     <div class="container">
-        <h1 class="h1_big_news">{{document.fragments.news.text}}</h1>
+        <h1 class="h1_big_news">{{document.fragments.news_title.text}}</h1>
         <div class="row">
             {% assign news = site.prismicData.collections.news | sort:'fragments.publication_date.date' | reverse  %}
             {% for news_item in news limit:3 %}     
