--- a/news.html
+++ b/news.html
@@ -33,11 +33,11 @@ layout: default
            <a class="wrap_a" href="/{{ site.langShort }}/news/{{ news_item.slug }}">
               <div class="new col-md-12">
                   <div class="wrap_media">
-                    <img class="grow" 
-                    srcset="{{ news_item.fragments.image.url }} {{ news_item.fragments.image.width }}w, {{ news_item.fragments.image.view_mobile_url }} {{ news_item.fragments.image.view_mobile_width }}w"
-                    sizes="(max-width: 800px) 100%, 400px"
-                    src="{{ news_item.fragments.image.url }}"
-                    alt="{{ news_item.fragments.image.alt }}" />
+                    <picture class="grow">
+                      <source srcset="{{ news_item.fragments.image.view_mobile_url }}" media="(max-width: 768px)">
+                      <source srcset="{{ news_item.fragments.image.url }}" media="(min-width: 768px)">
+                      <img class="grow" src="{{news_item.fragments.image.view_mobile_url }}" alt="{{ news_item.fragments.image.alt }}">
+                    </picture>
                   </div>
                   <h1 class="h1_news">
                       {{ news_item.fragments.title.text }}
