corrected en-en to en-gb

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     {% endfor %}
     </div>
 </div>
-{% if site.lang == "fr-fr" or site.lang == "de-de" or site.lang == "en-en" or site.lang == "it-it" %} 
+{% if site.lang == "fr-fr" or site.lang == "de-de" or site.lang == "en-gb" or site.lang == "it-it" %} 
 <div class="news_section">
     <div class="container">
         <h1 class="h1_big_news">{{document.fragments.news_title.text}}</h1>
