Add multiple size background hero

--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 --- 
 layout: default
 ---
-{% assign document = site.prismicData.single.page_home %} 
-<div class="hero" style="background-image: url('{{ document.fragments.claims_image.url }}');">
+{% assign document = site.prismicData.single.page_home %}
+<style>
+        html .hero{
+            background-image: url('{{ document.fragments.claims_image.url }}');
+        }
+        @media (max-width: 576px) {
+            html .hero{
+                background-image: url('{{ document.fragments.claims_image.view_mobile_url }}');
+            }
+        }@media (max-width: 768px) {
+            html .hero{
+                background-image: url('{{ document.fragments.claims_image.view_tablet_url }}');
+            }
+        }@media (max-width: 992px) {
+            html .hero{
+                background-image: url('{{ document.fragments.claims_image.view_desktop_url }}');
+            }
+        }
+</style>
+<div class="hero">
     <div class="container">
     {% for post in document.fragments.claims_list.group_documents %}
         <h1 class="the_claim">{{post.fragments.claim.text}}<br/><span class="accent">{{post.fragments.claim_part_2.text}}</span></h1>
