--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ layout: default
                 <input data-name="Lang" id="lang" maxlength="2" name="lang" value="{{ site.lang }}" required="required" type="hidden">
             </div>
             <div class="newsletter-form-button">
-                <input class="newsletter_cta_btn btn" data-wait="Please wait..." type="submit" value="{{ document.fragments.newsletter_submit_button.text }}">
+                <input class="newsletter_cta_btn btn" style="background-color: #0180c0;" data-wait="Please wait..." type="submit" value="{{ document.fragments.newsletter_submit_button.text }}">
             </div>
         </form>
         <div class="success form-done">
