--- a/index.html
+++ b/index.html
@@ -73,11 +73,22 @@ layout: default
 </div>
 <div class="socials_cta">
     <div class="container flex vcenter fade-in-module">
-        <div class="socials-text">
+        <div class="col-md-12 socials-text" style="text-align: center;">
             <h1 class="h1_newsletter_cta">Suivez-nous partout!</h1>
         </div>
         <div class="socials-icon-cta">
-            
+            <a class="socials_links instagram" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
+	      	    <img height="60" src="/images/layout/Instagram-logo.png">
+	    	</a>
+	    	<a class="socials_links facebook" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
+	      	    <img height="60" src="/images/layout/facebook-icon.png">
+	    	</a>
+	    	<a class="socials_links twitter" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
+	      	    <img height="50" src="/images/layout/twitter-icon.svg">
+	    	</a>
+	    	<a class="socials_links youtube" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+	      	    <img height="50" src="/images/layout/YouTube-icon.png">
+	    	</a>
         </div>
     </div>
 </div>
