--- a/index.html
+++ b/index.html
@@ -74,21 +74,31 @@ layout: default
 <div class="socials_cta">
     <div class="container flex vcenter fade-in-module">
         <div class="col-md-12 socials-text" style="text-align: center;">
-            <h1 class="h1_newsletter_cta">Suivez-nous partout!</h1><br>
+            <div class="col-md-12">
+		<h1 class="h1_newsletter_cta">Suivez-nous partout!</h1>
+	    </div>
         </div>
         <div class="col-md-12 socials-icon-cta">
-            <a class="socials_links instagram" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
-	      	<img height="60" src="/images/layout/Instagram-logo.png">
-	    </a>
-	    <a class="socials_links facebook" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
-	      	<img height="60" src="/images/layout/facebook-icon.png">
-	    </a>
-	    <a class="socials_links twitter" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-	      	<img height="50" src="/images/layout/twitter-icon.svg">
-	    </a>
-	    <a class="socials_links youtube" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
-	      	<img height="50" src="/images/layout/YouTube-icon.png">
-	    </a>
+	    <div class="col-md-1 col-md-offset-4">
+            	<a class="socials_links instagram" href="https://www.instagram.com/lausanne2020" target="_blank" rel="noopener">
+	      	    <img height="60" src="/images/layout/Instagram-logo.png">
+	    	</a>
+	    </div>
+	    <div class="col-md-12">
+	    	<a class="socials_links facebook" href="https://www.facebook.com/lausanne2020/" target="_blank" rel="noopener">
+	      	    <img height="60" src="/images/layout/facebook-icon.png">
+	    	</a>
+	    </div>
+	    <div class="col-md-12">
+	    	<a class="socials_links twitter" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
+	      	    <img height="50" src="/images/layout/twitter-icon.svg">
+	    	</a>
+	    </div>
+	    <div class="col-md-12">
+	    	<a class="socials_links youtube" href="https://www.youtube.com/channel/UCcEgzQvjtLp7UCdsXfuHbyQ" target="_blank" rel="noopener">
+	      	    <img height="50" src="/images/layout/YouTube-icon.png">
+	    	</a>
+	    </div>
         </div>
     </div>
 </div>
@@ -97,6 +107,26 @@ layout: default
 	<h1 class="h1_previous_yog">Les précédents Jeux Olympiques de la Jeunesse</h1><br>
     </div>
     <div class="col-md-12 previous_yog_icons">
+	<div class="col-md-2 col-md-offset-2 col-xs-6">
+            <a href="https://www.olympic.org/lillehammer-2016" target="_blank" rel="noopener">
+                <img height="80" src="/images/home/lillehammer2016.png">
+            </a>
+        </div>
+        <div class="col-md-2 col-xs-6">
+            <a href="https://www.olympic.org/nanjing-2014" target="_blank" rel="noopener">
+                <img height="80" src="/images/home/Nanjing2014.png">
+            </a>
+        </div>
+        <div class="col-md-2 col-xs-6">
+            <a href="https://www.olympic.org/innsbruck-2012" target="_blank" rel="noopener">
+                <img height="80" src="/images/home/Innsbruck2012.png">
+            </a>
+        </div>
+        <div class="col-md-2 col-xs-6">
+            <a href="https://www.olympic.org/singapore-2010" target="_blank" rel="noopener">
+                <img height="80" src="/images/home/Singapore2010.png">
+            </a>
+        </div>
     </div>
 </div>
 <div class="incoming_games">
@@ -104,32 +134,32 @@ layout: default
 	<h1 class="h1_incoming_games">Les prochains Jeux Olympiques</h1><br>
     </div>
     <div class="col-md-12 incoming_games_icons">
-    	<div class="col-md-2 col-xs-6">
+    	<div class="col-md-4 col-xs-6">
             <a href="https://www.pyeongchang2018.com/" target="_blank" rel="noopener">
                 <img height="80" src="/images/layout/2018_2.png">
             </a>
         </div>
-        <div class="col-md-2 col-xs-6">
+        <div class="col-md-4 col-xs-6">
             <a href="http://www.buenosaires2018.com/" target="_blank" rel="noopener">
                 <img height="80" src="/images/home/BA.png">
             </a>
         </div>
-        <div class="col-md-2 col-xs-6">
+        <div class="col-md-4 col-xs-6">
             <a href="https://tokyo2020.jp/" target="_blank" rel="noopener">
                 <img height="80" src="/images/layout/2020_1.png">
             </a>
         </div>
-        <div class="col-md-2 col-xs-6">
+        <div class="col-md-4 col-xs-6">
             <a href="http://www.beijing2022.cn/" target="_blank" rel="noopener">
                 <img height="80" src="/images/layout/Beijing_2022_emblem.jpg">
             </a>
         </div>
-        <div class="col-md-2 col-xs-6">
+        <div class="col-md-4 col-xs-6">
             <a href="http://paris2024.org/" target="_blank" rel="noopener">
                 <img height="80" src="/images/home/Paris.jpg">
             </a>
         </div>
-        <div class="col-md-2 col-xs-6">
+        <div class="col-md-4 col-xs-6">
             <a href="https://www.olympic.org/la-2028" target="_blank" rel="noopener">
                 <img height="80" src="/images/home/LA.png">
             </a>
