--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: default
     </div>
 </div>
 <div class="socials_cta">
-    <div class="container flex vcenter fade-in-module">
+    <div class="container vcenter fade-in-module">
         <div class="col-md-12 socials-text" style="text-align: center;">
             <div class="col-md-12">
 		<h1 class="h1_newsletter_cta">Suivez-nous partout!</h1>
