--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ layout: default
         </div>
     </div>
 </div>
-<div class="previous_yog">
+<div class="previous_yog" style="text-align: center;">
     <div class="col-md-12 previous_yog_text">
 	<h1 class="h1_previous_yog">Les précédents Jeux Olympiques de la Jeunesse</h1><br>
     </div>
@@ -130,37 +130,37 @@ layout: default
         </div>
     </div>
 </div>
-<div class="incoming_games">
+<div class="incoming_games" style="text-align: center;">
     <div class="col-md-12 incoming_games_text">
 	<h1 class="h1_incoming_games">Les prochains Jeux Olympiques</h1><br>
     </div>
     <div class="col-md-12 incoming_games_icons">
-    	<div class="col-md-4 col-xs-6">
+    	<div class="col-md-2 col-offset-2 col-xs-6">
             <a href="https://www.pyeongchang2018.com/" target="_blank" rel="noopener">
                 <img height="80" src="/images/layout/2018_2.png">
             </a>
         </div>
-        <div class="col-md-4 col-xs-6">
+        <div class="col-md-2 col-xs-6">
             <a href="http://www.buenosaires2018.com/" target="_blank" rel="noopener">
                 <img height="80" src="/images/home/BA.png">
             </a>
         </div>
-        <div class="col-md-4 col-xs-6">
+        <div class="col-md-2 col-xs-6">
             <a href="https://tokyo2020.jp/" target="_blank" rel="noopener">
                 <img height="80" src="/images/layout/2020_1.png">
             </a>
         </div>
-        <div class="col-md-4 col-xs-6">
+        <div class="col-md-2 col-xs-6">
             <a href="http://www.beijing2022.cn/" target="_blank" rel="noopener">
                 <img height="80" src="/images/layout/Beijing_2022_emblem.jpg">
             </a>
         </div>
-        <div class="col-md-4 col-xs-6">
+        <div class="col-md-2 col-md-offset-8 col-xs-6">
             <a href="http://paris2024.org/" target="_blank" rel="noopener">
                 <img height="80" src="/images/home/Paris.jpg">
             </a>
         </div>
-        <div class="col-md-4 col-xs-6">
+        <div class="col-md-2 col-xs-6">
             <a href="https://www.olympic.org/la-2028" target="_blank" rel="noopener">
                 <img height="80" src="/images/home/LA.png">
             </a>
