--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ layout: default
 	    </div>
 	    <div class="col-md-1">
 	    	<a class="socials_links twitter" href="https://twitter.com/lausanne2020" target="_blank" rel="noopener">
-	      	    <img height="50" src="/images/layout/twitter-wh-icon.svg">
+	      	    <img height="50" src="/images/layout/Twitter-wh-icon.png">
 	    	</a>
 	    </div>
 	    <div class="col-md-1">
@@ -155,7 +155,7 @@ layout: default
                 <img height="80" src="/images/layout/Beijing_2022_emblem.jpg">
             </a>
         </div>
-        <div class="col-md-2 col-md-offset-8 col-xs-6">
+        <div class="col-md-2 col-md-offset-2 col-xs-6">
             <a href="http://paris2024.org/" target="_blank" rel="noopener">
                 <img height="80" src="/images/home/Paris.jpg">
             </a>
