--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ layout: default
 	<h1 class="h1_incoming_games">Les prochains Jeux Olympiques</h1><br>
     </div>
     <div class="col-md-12 incoming_games_icons come-in-module">
-    	<div class="col-md-2 col-offset-2 col-xs-6">
+    	<div class="col-md-2 col-md-offset-2 col-xs-6">
             <a href="https://www.pyeongchang2018.com/" target="_blank" rel="noopener">
                 <img height="80" src="/images/layout/2018_2.png">
             </a>
